freemed project changelog
($Id$)

* Wed Jan 09 2001 fforest
  - manage_bills show unpaid proc totals per patient. grand total at end
  - generate_fixed_forms Added some warning messages to spit out durin
      during bill generation.
  - manage_payments handling of allowed amt (fee adjust) recoded to act more like
      a deductable but with a twist. Looks better on ledger also.
      pick up payrectype,source and desc for payments. also allow bill to be 
      resubmitted from a payment add.
  - patient issue warning messages if :
      more than 1 insurer of a type is active.
      more than 1 guar is active.
  - payment_records dont allow Next without selecting a proc
      ledger is now a control break report with subtotals by procedure.
  - macros add FEEADJUST 9

* Wed Jan 09 2001 rufustfirefly
  - fixed bug in freemed_display_arraylist() [thanks to Fred for that one]

* Tue Jan 09 2001 fforest
   - change all fdb_ to $sql->

* Tue Jan 09 2001 fforest
  - containers for patient have been updated to support the new
    guarantor/payer tables.
  - other files changed to get inscos and payers using the new fields in
    patient class.
  - Link to payment records added to manage_payments screen to display
    ledger transactions for the selected procedurei only.
  - new functions added to API for getting the payers and guars. used by
    patient class.

* Mon Jan 01 2001 rufustfirefly
  - moved facility.php3 -> modules/facility.module.php
  - moved patient_record_template.php3 ->
    modules/patient_record_template.module.php
  - minor fixes in lib/module_maintenance.php (paper bag stupid!)
  - moved authorizations.php -> modules/authorizations.php

* Sat Dec 30 2000 fforest
   - fix a few coding errors in generate_fixed_forms and manage_bills
   - lib/API.php fixed htmlize_array
   - lib/calender-functions  fix date_in_range to return true if in range.

* Fri Dec 29 2000 rufustfirefly
  - small i18n fixes and buffer rewrites in generate_fixed_forms.php
